Fix T45453: Driver button's ignore DPI